--- a/sin.html
+++ b/sin.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-  <title>sin(x)</title>
+  <title>sin(x) ~ x-x^3/3!+x^5/5!-x^7/7!+..-</title>
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
   <style>
   body{font-family: arial,verdana;font-size:32px;}  
@@ -31,6 +31,8 @@
        }
 
   };
+
+    //x-x^3/3!+x^5/5!-x^7/7!+..-
 
     function factorial(n) {
              if(n==1 || n==0) return 1;
